RI-6114: prevent long text overlapping in SuperSelect

--- a/redisinsight/ui/src/pages/home/components/styles.module.scss
+++ b/redisinsight/ui/src/pages/home/components/styles.module.scss
@@ -166,3 +166,7 @@
     }
   }
 }
+
+.selectWithLongTextSupport {
+  display: block !important;
+}
